force-app/main/default/objects/Associated_Loan_Application__c/Associated_Loan_Application__c.object-meta.xml
<CustomObject>
    <label>Associated Loan Application</label>
    <nameField>
        <displayFormat>ALA-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Loan Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>