force-app/main/default/objects/Associated_Loan_Application__c/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Captures the Interaction between RBM &amp; Broker</description>
    <label>Interaction</label>
    <referenceTo>Interaction</referenceTo>
    <relationshipLabel>Associated Loan Applications</relationshipLabel>
    <relationshipName>Associated_Loan_Applications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>