force-app/main/default/objects/Associated_Loan_Application__c/fields/Residential_Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Residential_Loan_Application__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>captures the associated loan applications</description>
    <label>Residential Loan Application</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Associated Loan Applications</relationshipLabel>
    <relationshipName>Associated_Loan_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>