force-app/main/default/objects/Associated_Loan_Application__c/fields/UniqueKeyForAssociatedApplication__c.field-meta.xml
<CustomField>
    <fullName>UniqueKeyForAssociatedApplication__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This field is used to restrict creation of duplicate Associated Loan Application record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>UniqueKeyForAssociatedApplication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>